--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^2.10.8",
+    "@date-io/moment": "1.x",
     "@material-ui/core": "^4.11.3",
     "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "^2.19.0",
     "material-ui": "^0.20.2",
+    "material-ui-pickers": "2.x",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
