--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.19.0",
     "hoc": "^1.1.0",
     "material-ui": "^0.20.2",
+    "material-ui-dropzone": "^3.5.0",
     "material-ui-pickers": "2.x",
     "moment": "^2.29.1",
     "react": "^17.0.2",
